--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -94,8 +94,8 @@ html[xmlns] .slides {display: block;}
 	transition: all 0.3s ease-in-out; 
 	-webkit-transition: all 0.3s ease-in-out;
 }
-.flexslider.top_slider .flex-direction-nav li a.flex-prev:before {content: "\f104";}
-.flexslider.top_slider .flex-direction-nav li a.flex-next:before {content: "\f105";}
+.flexslider.top_slider .flex-direction-nav li a.flex-prev:before {content: "ᐊ";}
+.flexslider.top_slider .flex-direction-nav li a.flex-next:before {content: "ᐅ";}
 .flexslider.top_slider .flex-direction-nav li a:hover:before {color:#fff;}
 
 
